css/style.css
/* ... */
/* montserrat-700 - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 700;
  src: local(''),
       url('../fonts/montserrat-v15-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* montserrat-700italic - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 700;
  src: local(''),
       url('../fonts/montserrat-v15-latin-700italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-700italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* montserrat-800 - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 800;
  src: local(''),
       url('../fonts/montserrat-v15-latin-800.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-800.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* montserrat-800italic - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 800;
  src: local(''),
       url('../fonts/montserrat-v15-latin-800italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-800italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* montserrat-900 - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: normal;
  font-weight: 900;
  src: local(''),
       url('../fonts/montserrat-v15-latin-900.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}
/* montserrat-900italic - latin */
@font-face {
  font-family: 'Montserrat';
  font-style: italic;
  font-weight: 900;
  src: local(''),
       url('../fonts/montserrat-v15-latin-900italic.woff2') format('woff2'), /* Chrome 26+, Opera 23+, Firefox 39+ */
       url('../fonts/montserrat-v15-latin-900italic.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
}


body {
  background-color:#1E1D1F;
  padding-top: 4rem;
  padding-bottom: 4rem;
}

.bg-dark {
  background-color:#1A191B!important;
}

.menu-item-fa {
  font-size:21px;
}

.nav-item-space {
  padding-right:5px;
}

.container {
  color:#ffffff;
  top:30px;
}

.card-dark {
  background-color:#282729;
  border-color:#282729;
}

.card-header-dark {
  background-color:#222123;
}

.card-chart {
  padding:0px;
}

.table-responsive, .table {
  color:#ffffff;
}

.link-white {
  color:#ffffff;
  text-decoration:none;
}

.link-white:hover {
  color:#cfcfcf;
  text-decoration: underline;
}

.blocks-wrapper {
	width: 100%;
	overflow-x: auto;
	white-space: nowrap;
}

.block-border {
	/* background: linear-gradient(130deg, #5f86f2, #a65ff2, #f25fd0, #f25f61, #f2cb5f, #abf25f, #5ff281, #5ff2f0); */
  background: rgba(255,255,255,0.1);
	animation: gradient 30s ease infinite;
	background-size: 1000% 1000% !important;
	width:125px;height:125px;
	padding:5px 6px;
	border-radius:10px;
	display: inline-block;
}
/*
body > main > div.row > center > div > div:nth-child(7) {
  animation-delay: 4s;
}

body > main > div.row > center > div > div:nth-child(8) {
  animation-delay: 5s;
}
body > main > div.row > center > div > div:nth-child(9) {
  animation-delay: 6s;
}
body > main > div.row > center > div > div:nth-child(10) {
  animation-delay: 7s;
} */


body > main > div.row > center > div > div:nth-child(6) {}

@keyframes gradient {
	0% {
		background-position: 0% 50%;
	}
	50% {
		background-position: 100% 50%;
	}
	100% {
		background-position: 0% 50%;
	}
}

.block-border-light {
	background: linear-gradient(130deg, rgba(95, 134, 242, 0.50), rgba(166, 95, 242, 0.40), rgba(242, 95, 208, 0.40), rgba(242, 95, 97, 0.40), rgba(242, 203, 95, 0.40), rgba(171, 242, 95, 0.40), rgba(95, 242, 129, 0.40), rgba(95, 242, 240, 0.40));
	background-size: 1000% 1000% !important;
  animation: gradient 15s ease infinite;
	width:125px;
  height:125px;
	padding:5px 6px;
	border-radius:10px;
	display: inline-block;
}

.block-border-light:nth-child(1) {
  animation-delay: 3s;
}

.block-border-light:nth-child(2) {
  animation-delay: 2s;
}

.block-border-light:nth-child(3) {
  animation-delay: 1s;
}

.block-margin-left {
	margin-left:20px;
}

.block-margin-right {
	margin-right:20px;
}

.block {
	padding:5px;
	border-radius:5px;
	height:100%;
	background-color:#1E1D1F;
	position: relative;
}

.block-click:hover {
	cursor:pointer;
}

.gradient {
  padding: 30px;
  width: 250px;
  float: left;
  border: 1.5px solid;
  border-top: 0;
  border-bottom: 0;
  border-image: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(226, 226, 226, 1) 48%, rgba(255, 255, 255, 0) 100%);
  border-image-slice: 1;
}

tr {
  border-bottom: 0;
}

.table>:not(caption)>*>* {
  border-bottom-width: 0 !important;
}

.vertical-spacing {
	height: 100%;
	width: 2px;
	display: inline-block;
	margin-right:20px;
	margin-left:20px;
	background: -webkit-linear-gradient(top, rgba(255, 255, 255, 0) 0%,rgba(255, 255, 255, 0) 10%,rgba(255, 255, 255, 0.65) 50%,rgba(255, 255, 255, 0) 90%,rgba(255, 255, 255, 0) 100%);
}

#loading {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 100;
  width: 100vw;
  height: 100vh;
  background-color: #1D1E1F;
	-webkit-animation-name: test;
  -webkit-animation-delay: 1s;
  -webkit-animation-duration: .3s;
  -webkit-animation-fill-mode: both;
}
/* ... */

